fix: css small screen fixed so the right side isn't just white space. Need to work on footer

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -46,7 +46,7 @@
 
 .layout__background {
   margin: auto;
-  width: 1140px;
+  width: 1100px;
   height: 600px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../media/backgroundDBZ-sm.png");
@@ -127,6 +127,18 @@
     width: 100px;
   }
 }
+
+@media screen and (max-width: 560px) {
+  .layout__main-container {
+    /* min-width: 450px; */
+    width: 500px;
+  }
+  .layout__background__h2 {
+    font-size: 25px;
+    padding: 55px 0 20px 15px;
+    margin: auto;
+  }
+}
 @media screen and (max-width: 475px) {
   .layout__background {
     height: 220px;
@@ -136,16 +148,21 @@
     background-color: #0e1848;
     padding: 60px 0 20px 0;
   }
-}
-@media screen and (max-width: 560px) {
   .layout__main-container {
-    width: auto;
+    min-width: 300px;
+  }
+  .layout__body {
+    padding-top: 5%;
+    min-width: auto;
   }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 435px) {
   .layout__background {
     height: 175px;
     width: 330px;
     margin: auto;
+  }
+  .layout__main-container {
+    min-width: 375px;
   }
 }
